// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PensionPotCalculator component should not fail when query is emtpy 1`] = `
<div>
  <div
    class="container-auto lg:max-w-[960px]"
  >
    <div
      class="bg-blue-100 p-5 md:p-10 mb-8 rounded-bl-[24px]"
    >
      <h1
        class="text-4xl md:text-6xl font-bold mb-6 text-blue-800 md:mb-8"
      >
        Pension Pot Calculator
      </h1>
      <div
        aria-describedby="error-summary-heading"
        aria-relevant="all"
        data-testid="error-summary-container"
        id="error-summary-container"
        role="alert"
        tabindex="-1"
      >
        <div
          class="t-error-summary border-4 w-full border-red-700 py-8 px-4 sm:px-6 lg:px-8 outline-none mb-6"
          data-testid="error-records"
        >
          <div
            class="flex items-center"
          >
            <svgr-mock
              classname="min-w-[50px] fill-red-700"
              data-testid="icon-error"
            />
            <h5
              class="text-lg md:text-xl text-gray-800 font-bold"
              id="error-summary-heading"
            >
              There's been a problem
            </h5>
          </div>
          <div
            class="pl-4 md:pl-[50px]"
          >
            <ul
              class="mt-3 ml-4 list-disc"
            >
              <li
                class="underline text-lg decoration-solid text-red-700 mb-2.5 last:mb-0 break-words"
              >
                <a
                  class="whitespace-pre-wrap"
                  data-testid="error-link-0"
                  href="#pot"
                >
                  How much is in your pot?
                   - 
                  Enter a figure
                </a>
              </li>
              <li
                class="underline text-lg decoration-solid text-red-700 mb-2.5 last:mb-0 break-words"
              >
                <a
                  class="whitespace-pre-wrap"
                  data-testid="error-link-1"
                  href="#age"
                >
                  How old are you?
                   - 
                  Enter a figure
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <form
        action="api/pension-pot-calculator"
        novalidate=""
      >
        <input
          name="isEmbed"
          type="hidden"
          value="false"
        />
        <div
          class="border-0 border-l-4 border-red-700 border-solid pl-4"
          data-testid="errors"
        >
          <fieldset
            class="mb-4"
          >
            <label
              class="text-2xl font-medium text-gray-800 inline-flex mb-0"
              for="pot"
            >
              How much is in your pot?
            </label>
            <p
              class="text-base text-gray-400 mb-2"
            >
              Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
            </p>
            <div
              aria-describedby="pot"
              class="mb-2 text-red-700"
            >
              Enter a figure
            </div>
            <div
              class="flex"
            >
              <span
                aria-hidden="true"
                class="bg-gray-100 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px]"
              >
                £
              </span>
              <input
                aria-label="How much is in your pot? In pounds."
                aria-required="true"
                class="tool-field w-full border pl-2 ml-0 h-auto focus:outline-purple-700 focus:shadow-focus-outline mr-2 border-gray-600 border-l-0 max-w-[360px]"
                data-testid="pot"
                id="pot"
                inputmode="numeric"
                name="pot"
                type="text"
                value=""
              />
            </div>
          </fieldset>
        </div>
        <div
          class="border-0 border-l-4 border-red-700 border-solid pl-4"
          data-testid="errors"
        >
          <fieldset
            class="mb-4"
          >
            <label
              class="text-2xl font-medium text-gray-800 inline-flex mb-0"
              for="age"
            >
              How old are you?
            </label>
            <p
              class="text-base text-gray-400 mb-2"
            >
              Age description
            </p>
            <div
              aria-describedby="age"
              class="mb-2 text-red-700"
            >
              Enter a figure
            </div>
            <div
              class="flex"
            >
              <input
                aria-label="How old are you? In years."
                aria-required="true"
                class="tool-field w-full border pl-2 focus:outline-purple-700 focus:shadow-focus-outline border-gray-600 border-r-0 h-[49px] ml-0 max-w-[307px]"
                data-testid="age"
                id="age"
                inputmode="numeric"
                name="age"
                type="text"
                value=""
              />
              <span
                aria-hidden="true"
                class="bg-gray-100 py-2 px-3.5 rounded-r border-gray-400 border border-solid min-w-[92px] mr-2 flex items-center"
              >
                Years
              </span>
            </div>
          </fieldset>
        </div>
        <button
          class="border-0 text-white bg-pink-600 hover:bg-pink-800 hover:shadow-none active:bg-pink-900 active:outline-yellow-200 active:text-white t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0 t-primary-button mt-10 text-base leading-normal mb-14 md:mt-12 md:mb-16 md:leading-6"
          id="submit"
          name="submit"
          type="submit"
          value="true"
        >
          <span />
          Calculate
          <span />
        </button>
        <div
          class="mb-8 text-base"
        >
          <p>
            Callout message
          </p>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PensionPotCalculator component should render PensionPotCalculator component 1`] = `
<div>
  <div
    class="container-auto lg:max-w-[960px]"
  >
    <div
      class="bg-blue-100 p-5 md:p-10 mb-8 rounded-bl-[24px]"
    >
      <h1
        class="text-4xl md:text-6xl font-bold mb-6 text-blue-800 md:mb-8"
      >
        Pension Pot Calculator
      </h1>
      <div
        aria-describedby="error-summary-heading"
        aria-relevant="all"
        data-testid="error-summary-container"
        id="error-summary-container"
        role="alert"
        tabindex="-1"
      >
        <div
          class="t-error-summary border-4 w-full border-red-700 py-8 px-4 sm:px-6 lg:px-8 outline-none mb-6"
          data-testid="error-records"
        >
          <div
            class="flex items-center"
          >
            <svgr-mock
              classname="min-w-[50px] fill-red-700"
              data-testid="icon-error"
            />
            <h5
              class="text-lg md:text-xl text-gray-800 font-bold"
              id="error-summary-heading"
            >
              There's been a problem
            </h5>
          </div>
          <div
            class="pl-4 md:pl-[50px]"
          >
            <ul
              class="mt-3 ml-4 list-disc"
            >
              <li
                class="underline text-lg decoration-solid text-red-700 mb-2.5 last:mb-0 break-words"
              >
                <a
                  class="whitespace-pre-wrap"
                  data-testid="error-link-0"
                  href="#pot"
                >
                  How much is in your pot?
                   - 
                  Enter a figure
                </a>
              </li>
              <li
                class="underline text-lg decoration-solid text-red-700 mb-2.5 last:mb-0 break-words"
              >
                <a
                  class="whitespace-pre-wrap"
                  data-testid="error-link-1"
                  href="#age"
                >
                  How old are you?
                   - 
                  Enter a figure
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <form
        action="api/pension-pot-calculator"
        novalidate=""
      >
        <input
          name="isEmbed"
          type="hidden"
          value="false"
        />
        <div
          class="border-0 border-l-4 border-red-700 border-solid pl-4"
          data-testid="errors"
        >
          <fieldset
            class="mb-4"
          >
            <label
              class="text-2xl font-medium text-gray-800 inline-flex mb-0"
              for="pot"
            >
              How much is in your pot?
            </label>
            <p
              class="text-base text-gray-400 mb-2"
            >
              Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
            </p>
            <div
              aria-describedby="pot"
              class="mb-2 text-red-700"
            >
              Enter a figure
            </div>
            <div
              class="flex"
            >
              <span
                aria-hidden="true"
                class="bg-gray-100 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px]"
              >
                £
              </span>
              <input
                aria-label="How much is in your pot? In pounds."
                aria-required="true"
                class="tool-field w-full border pl-2 ml-0 h-auto focus:outline-purple-700 focus:shadow-focus-outline mr-2 border-gray-600 border-l-0 max-w-[360px]"
                data-testid="pot"
                id="pot"
                inputmode="numeric"
                name="pot"
                type="text"
                value="100,000"
              />
            </div>
          </fieldset>
        </div>
        <div
          class="border-0 border-l-4 border-red-700 border-solid pl-4"
          data-testid="errors"
        >
          <fieldset
            class="mb-4"
          >
            <label
              class="text-2xl font-medium text-gray-800 inline-flex mb-0"
              for="age"
            >
              How old are you?
            </label>
            <p
              class="text-base text-gray-400 mb-2"
            >
              Age description
            </p>
            <div
              aria-describedby="age"
              class="mb-2 text-red-700"
            >
              Enter a figure
            </div>
            <div
              class="flex"
            >
              <input
                aria-label="How old are you? In years."
                aria-required="true"
                class="tool-field w-full border pl-2 focus:outline-purple-700 focus:shadow-focus-outline border-gray-600 border-r-0 h-[49px] ml-0 max-w-[307px]"
                data-testid="age"
                id="age"
                inputmode="numeric"
                name="age"
                type="text"
                value="57"
              />
              <span
                aria-hidden="true"
                class="bg-gray-100 py-2 px-3.5 rounded-r border-gray-400 border border-solid min-w-[92px] mr-2 flex items-center"
              >
                Years
              </span>
            </div>
          </fieldset>
        </div>
        <button
          class="border-0 text-white bg-pink-600 hover:bg-pink-800 hover:shadow-none active:bg-pink-900 active:outline-yellow-200 active:text-white t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0 t-primary-button mt-10 text-base leading-normal mb-14 md:mt-12 md:mb-16 md:leading-6"
          id="submit"
          name="submit"
          type="submit"
          value="true"
        >
          <span />
          Calculate
          <span />
        </button>
        <div
          class="mb-8 text-base"
        >
          <p>
            Callout message
          </p>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`PensionPotCalculator component should render embed version of PensionPotCalculator 1`] = `
<div>
  <div
    class="container-auto lg:max-w-[960px] m-0 p-0"
  >
    <div
      class="bg-blue-100 p-5 md:p-10 mb-8 rounded-bl-[24px]"
    >
      <h2
        class="text-3xl md:text-4xl font-bold mb-6 text-blue-800 md:mb-8"
      >
        Pension Pot Calculator
      </h2>
      <div
        aria-describedby="error-summary-heading"
        aria-relevant="all"
        data-testid="error-summary-container"
        id="error-summary-container"
        role="alert"
        tabindex="-1"
      >
        <div
          class="t-error-summary border-4 w-full border-red-700 py-8 px-4 sm:px-6 lg:px-8 outline-none mb-6"
          data-testid="error-records"
        >
          <div
            class="flex items-center"
          >
            <svgr-mock
              classname="min-w-[50px] fill-red-700"
              data-testid="icon-error"
            />
            <h5
              class="text-lg md:text-xl text-gray-800 font-bold"
              id="error-summary-heading"
            >
              There's been a problem
            </h5>
          </div>
          <div
            class="pl-4 md:pl-[50px]"
          >
            <ul
              class="mt-3 ml-4 list-disc"
            >
              <li
                class="underline text-lg decoration-solid text-red-700 mb-2.5 last:mb-0 break-words"
              >
                <a
                  class="whitespace-pre-wrap"
                  data-testid="error-link-0"
                  href="#pot"
                >
                  How much is in your pot?
                   - 
                  Enter a figure
                </a>
              </li>
              <li
                class="underline text-lg decoration-solid text-red-700 mb-2.5 last:mb-0 break-words"
              >
                <a
                  class="whitespace-pre-wrap"
                  data-testid="error-link-1"
                  href="#age"
                >
                  How old are you?
                   - 
                  Enter a figure
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <form
        action="api/pension-pot-calculator"
        novalidate=""
      >
        <input
          name="isEmbed"
          type="hidden"
          value="true"
        />
        <div
          class="border-0 border-l-4 border-red-700 border-solid pl-4"
          data-testid="errors"
        >
          <fieldset
            class="mb-4"
          >
            <label
              class="text-2xl font-medium text-gray-800 inline-flex mb-0"
              for="pot"
            >
              How much is in your pot?
            </label>
            <p
              class="text-base text-gray-400 mb-2"
            >
              Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
            </p>
            <div
              aria-describedby="pot"
              class="mb-2 text-red-700"
            >
              Enter a figure
            </div>
            <div
              class="flex"
            >
              <span
                aria-hidden="true"
                class="bg-gray-100 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px]"
              >
                £
              </span>
              <input
                aria-label="How much is in your pot? In pounds."
                aria-required="true"
                class="tool-field w-full border pl-2 ml-0 h-auto focus:outline-purple-700 focus:shadow-focus-outline mr-2 border-gray-600 border-l-0 max-w-[360px]"
                data-testid="pot"
                id="pot"
                inputmode="numeric"
                name="pot"
                type="text"
                value=""
              />
            </div>
          </fieldset>
        </div>
        <div
          class="border-0 border-l-4 border-red-700 border-solid pl-4"
          data-testid="errors"
        >
          <fieldset
            class="mb-4"
          >
            <label
              class="text-2xl font-medium text-gray-800 inline-flex mb-0"
              for="age"
            >
              How old are you?
            </label>
            <p
              class="text-base text-gray-400 mb-2"
            >
              Age description
            </p>
            <div
              aria-describedby="age"
              class="mb-2 text-red-700"
            >
              Enter a figure
            </div>
            <div
              class="flex"
            >
              <input
                aria-label="How old are you? In years."
                aria-required="true"
                class="tool-field w-full border pl-2 focus:outline-purple-700 focus:shadow-focus-outline border-gray-600 border-r-0 h-[49px] ml-0 max-w-[307px]"
                data-testid="age"
                id="age"
                inputmode="numeric"
                name="age"
                type="text"
                value=""
              />
              <span
                aria-hidden="true"
                class="bg-gray-100 py-2 px-3.5 rounded-r border-gray-400 border border-solid min-w-[92px] mr-2 flex items-center"
              >
                Years
              </span>
            </div>
          </fieldset>
        </div>
        <button
          class="border-0 text-white bg-pink-600 hover:bg-pink-800 hover:shadow-none active:bg-pink-900 active:outline-yellow-200 active:text-white t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0 t-primary-button mt-10 text-base leading-normal mb-14 md:mt-12 md:mb-16 md:leading-6"
          id="submit"
          name="submit"
          type="submit"
          value="true"
        >
          <span />
          Calculate
          <span />
        </button>
        <div
          class="mb-8 text-base"
        >
          <p>
            Callout message
          </p>
        </div>
      </form>
    </div>
  </div>
</div>
`;
